--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Comforter&family=Lobster&family=Merriweather:wght@300&family=Playfair+Display:ital@0;1&family=Prompt:wght@100&family=Roboto:ital@1&family=Supermercado+One&family=Syne+Tactile&display=swap");
+.scrollable-content {
+  max-height: 300px; /* Altura máxima del elemento */
+  overflow-y: scroll; /* Habilitar el desplazamiento vertical */
+}
 
 * {
   margin: 0;
@@ -13,8 +17,7 @@
 }
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(C:\Users\adrian\Desktop\proyect\portafolio\src\assets\img\lofi.jpg)
-      no-repeat;
+    url("assets/img/lofi.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -50,9 +53,18 @@ body::after {
 }
 
 ::-webkit-scrollbar {
-  width: 0;
+  width: 8px; /* Ancho de la barra de desplazamiento */
+  background-color: #f1f1f1; /* Color de fondo de la barra de desplazamiento */
 }
 
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del pulgar de la barra de desplazamiento */
+  border-radius: 4px; /* Radio de borde del pulgar de la barra de desplazamiento */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del pulgar de la barra de desplazamiento al pasar el cursor */
+}
 :root {
   --color-pri: #0123e7;
   --color-pri-light: #344fec;
