--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -15,12 +15,20 @@
 }
 
 .component-description {
-  font-size: 1rem;
-  font-weight: normal;
+  font-size: 1.1rem;
+  font-weight: 500;
   text-align: justify;
   margin-top: 10px;
+  font-family: "Arial", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-
+.component-description p {
+  margin: 0;
+  padding: 10px;
+}
 .gallery {
   margin-top: 2rem;
   padding-top: 40px;
@@ -78,27 +86,41 @@
 }
 
 @media (max-width: 520px) {
-  @media (max-width: 520px) {
-    .gallery-images {
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    }
+  .gallery-images {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+
+  .gallery-item {
+    transition: transform 0.3s ease, width 0.3s ease; /* Añadido */
+  }
+
+  .gallery-item:hover {
+    transform: scale(1.1);
+    width: 90%; /* Añadido */
+  }
+
+  .gallery-item:focus {
+    transform: scale(1);
+    width: 100%; /* Añadido */
   }
 }
+
 .certificates {
   margin-top: 2rem;
-  padding-top: 40px;
-  padding-bottom: 40px; /* Agrega padding hacia abajo */
+  padding-top: 80px;
+  padding-bottom: 140px;
 }
 
 .certificates-title {
-  font-size: 1.5rem;
+  padding-top: 160px;
+  font-size: 1.8rem;
   font-weight: bold;
   text-align: center;
   text-shadow: 0px 2px 4px rgba(0, 238, 255, 0.87);
 }
 
 .certificate-images {
-  padding-top: 40px;
+  padding-top: 120px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 6rem;
@@ -111,12 +133,11 @@
   transition: transform 0.3s ease;
 }
 
-.certificate-images img:hover {
-  transform: scale(1.2);
-}
-
-.certificate-images img:focus {
-  transform: scale(1);
+/* Media query para dispositivos con tamaño mayor a 768px */
+@media (min-width: 768px) {
+  .certificate-images img:hover {
+    transform: scale(1.5); /* Aumenta el tamaño en un 50% */
+  }
 }
 
 .title {
@@ -285,11 +306,11 @@
   }
 }
 .component-container {
-  margin-top: 90px;
+  margin-top: 170px;
   border-radius: 25px;
   background-color: transparent;
   padding: 20px;
-  background: rgba(36, 33, 33, 0.5);
+  background: rgba(0, 0, 0, 0.486);
   border: 1px solid rgb(255, 255, 255);
 }
 
@@ -298,27 +319,30 @@
   font-weight: bold;
   text-align: center;
   text-shadow: 0px 2px 4px rgba(0, 238, 255, 0.87);
+  padding-bottom: 35px;
 }
 
 .component-description {
   text-align: center;
+  text-shadow: #fff;
+  text-justify: inherit;
 }
 
 .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center; /* Agregamos centrado vertical */
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  justify-items: center;
+  align-items: center;
   margin-top: 20px;
   cursor: pointer;
 }
 
 .image-wrapper {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   overflow: hidden;
-  margin: 0 10px;
   position: relative;
 }
 
@@ -348,7 +372,7 @@
 }
 
 .image-wrapper:hover .small-image {
-  transform: scale(1.2);
+  transform: scale(0.8);
 }
 
 .image-wrapper:hover .image-text {
@@ -357,38 +381,8 @@
 
 /* Estilos para dispositivos móviles */
 @media (max-width: 767px) {
-  .component-container {
-    padding: 10px;
-  }
-
-  .component-title {
-    font-size: 1.2rem;
-  }
-
-  .component-description {
-    font-size: 0.9rem;
-  }
-
   .image-container {
-    flex-direction: column; /* Cambia la dirección de la flexión para apilar verticalmente */
-    align-items: flex-start; /* Cambia la alineación de los elementos a la izquierda */
-  }
-
-  .image-wrapper {
-    width: 80px;
-    height: 80px;
-    margin: 5px;
-  }
-
-  .image-text {
-    position: relative; /* Cambia la posición a relativa */
-    bottom: auto; /* Restablece la posición inferior */
-    left: auto; /* Restablece la posición izquierda */
-    width: auto; /* Restablece el ancho automático */
-    padding: 5px;
-    font-size: 12px;
-    opacity: 1; /* Restablece la opacidad a 1 por defecto */
-    transition: none; /* Elimina la transición en dispositivos móviles */
+    grid-template-columns: repeat(2, 1fr); /* Cambiado a 2 columnas */
   }
 }
 
@@ -398,9 +392,10 @@
   flex-direction: column;
   justify-content: center;
   padding: 0px 10px;
-  background: rgba(36, 33, 33, 0.5); /* Cambiamos el valor de opacity a 0.2 */
+  background: rgba(0, 0, 0, 0.493);
   border: 1px solid rgb(255, 255, 255);
   border-radius: 20px;
+  font-family: "Arial", sans-serif;
 }
 
 .title {
@@ -408,25 +403,29 @@
   font-weight: bold;
   text-align: center;
   color: rgb(233, 227, 227);
-  text-shadow: 0 7px 6px rgba(3, 177, 230, 0.6);
+  text-shadow: 0 2px 4px rgba(3, 177, 230, 0.6);
   margin-bottom: 100px;
 }
+
 .titl {
   font-size: 25px;
   font-weight: bold;
   text-align: center;
   color: #ffffff;
   text-shadow: 0px 2px 4px rgba(0, 238, 255, 0.87);
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Arial", sans-serif;
+  margin-bottom: 20px;
 }
+
 .tit {
   font-size: 20px;
   font-weight: bold;
   text-align: center;
   color: rgb(233, 227, 227);
-
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Arial", sans-serif;
+  margin-bottom: 10px;
 }
+
 .dim {
   margin-top: 20px;
   padding-top: 20px;
