--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -29,9 +29,16 @@
   margin: 0;
   padding: 10px;
 }
+.gal-title {
+  padding-bottom: 60px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0px 2px 4px rgba(0, 238, 255, 0.87);
+}
 .gallery {
   margin-top: 2rem;
-  padding-top: 40px;
+  padding-top: 300px;
   padding-bottom: 40px;
 }
 
@@ -77,7 +84,7 @@
 
 .image-title {
   font-size: 18px;
-  margin-bottom: 10px;
+  margin-bottom: 60px;
 }
 
 .image-description {
@@ -170,7 +177,7 @@
   grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr);
   column-gap: 1rem;
   row-gap: 2rem;
-  bottom: 0;
+  top: 180px;
 }
 
 .info-container .logo {
@@ -306,7 +313,7 @@
   }
 }
 .component-container {
-  margin-top: 170px;
+  margin-top: 400px;
   border-radius: 25px;
   background-color: transparent;
   padding: 20px;
@@ -396,6 +403,12 @@
   border: 1px solid rgb(255, 255, 255);
   border-radius: 20px;
   font-family: "Arial", sans-serif;
+  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.6);
+}
+@media screen and (max-width: 960px) {
+  .contain {
+    margin-top: 400px; /* Agregar margen superior en versiones móviles y tablets */
+  }
 }
 
 .title {
@@ -403,7 +416,7 @@
   font-weight: bold;
   text-align: center;
   color: rgb(233, 227, 227);
-  text-shadow: 0 2px 4px rgba(3, 177, 230, 0.6);
+  text-shadow: 0 2px 4px rgba(8, 8, 8, 0.6);
   margin-bottom: 100px;
 }
 
@@ -412,7 +425,7 @@
   font-weight: bold;
   text-align: center;
   color: #ffffff;
-  text-shadow: 0px 2px 4px rgba(0, 238, 255, 0.87);
+  text-shadow: 0px 2px 4px rgba(133, 133, 133, 0.87);
   font-family: "Arial", sans-serif;
   margin-bottom: 20px;
 }
