--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,33 @@
   color: white;
   z-index: 10;
 }
+
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("assets/img/lofi.jpg") no-repeat;
+    url("assets/img/lofis.jpg") no-repeat;
+
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
   max-width: 1200px;
   margin: auto;
-
+ 
   min-height: 100vh;
   font-family: "Inter", sans-serif;
-  animation: move 1s linear infinite forwards;
+
+
+
 }
+/* Definir una clase para aplicar el efecto de animación */
+@keyframes fadeInOut {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+
+
+
 
 html {
   scroll-behavior: smooth;
