--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("assets/img/lofis.jpg") no-repeat;
+    url("assets/img/lofu.jpg") no-repeat;
 
   background-size: cover;
   background-attachment: fixed;
