--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
   min-height: 30vh;
   margin-top: 80px;
   margin-bottom: 80px;
+  
 }
 
 .footer-container h1 {
@@ -33,7 +34,7 @@
   border-radius: 5px;
 }
 .footer-container h2:hover {
-  background-color: rgba(15, 231, 247, 0.582);
+  background-color: rgba(121, 120, 120, 0.644);
 }
 
 .social-links {
@@ -65,3 +66,4 @@
   fill: rgb(0, 217, 255);
   transform: scale(1.1); /* Agrega un efecto de escala al pasar el mouse */
 }
+/* Footer.css */
